Fixes layout on mobile

--- a/layouts/index.scss
+++ b/layouts/index.scss
@@ -1,3 +1,3 @@
-#frontpage {
-
+body {
+  width: fit-content;
 }
